out.txt
    Checking vox-corpus v0.1.0 (C:\Users\Owner\vox\crates\vox-corpus)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `turso`
  --> crates\vox-corpus\src\arca_replay.rs:32:33
   |
32 |     match db.query_all(sql_a2a, turso::params![limit]).await {
   |                                 ^^^^^ use of unresolved module or unlinked crate `turso`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `turso`
  --> crates\vox-corpus\src\arca_replay.rs:67:36
   |
67 |     match db.query_all(sql_events, turso::params![limit]).await {
   |                                    ^^^^^ use of unresolved module or unlinked crate `turso`

error[E0282]: type annotations needed
  --> crates\vox-corpus\src\arca_replay.rs:35:38
   |
35 |                 let sender: String = row.get(0).unwrap_or_default();
   |                                      ^^^ cannot infer type

error[E0282]: type annotations needed
  --> crates\vox-corpus\src\arca_replay.rs:70:42
   |
70 |                 let event_type: String = row.get(0).unwrap_or_default();
   |                                          ^^^ cannot infer type

error[E0061]: this function takes 5 arguments but 4 arguments were supplied
   --> crates\vox-corpus\src\synthetic_gen.rs:869:13
    |
869 |             emit_line(out, &prompt, &response, "agent_def")?;
    |             ^^^^^^^^^-------------------------------------- argument #5 of type `&str` is missing
    |
note: function defined here
   --> crates\vox-corpus\src\synthetic_gen.rs:312:4
    |
312 | fn emit_line(
    |    ^^^^^^^^^
...
317 |     record_type: &str,
    |     -----------------
help: provide the argument
    |
869 |             emit_line(out, &prompt, &response, "agent_def", /* &str */)?;
    |                                                           ++++++++++++

error[E0004]: non-exhaustive patterns: `8_u8..=u8::MAX` not covered
   --> crates\vox-corpus\src\corpus\augment.rs:269:30
    |
269 |         let strategy = match rng.gen_range(0u8..=7) {
    |                              ^^^^^^^^^^^^^^^^^^^^^^ pattern `8_u8..=u8::MAX` not covered
    |
    = note: the matched value is of type `u8`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
274 ~             5 | 6 | 7 => 4,
275 ~             8_u8..=u8::MAX => todo!(), // combined synonym+typo — 3× weight
    |

Some errors have detailed explanations: E0004, E0061, E0282, E0433.
For more information about an error, try `rustc --explain E0004`.
error: could not compile `vox-corpus` (lib) due to 6 previous errors
